# CursorShare

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md
docs/: architecture.md  driver-signing-guide.md  hid-descriptors.md  safe-shutdown-rollback.md
src/: main.cpp
src/bluetooth/: ble_hid_service.cpp  ble_hid_service.h  bt_hid_service.cpp  bt_hid_service.h  bt_pairing.cpp  bt_pairing.h  bt_validator.cpp  bt_validator.h
src/common/: constants.h  hid_descriptors.h  input_event.h  ipc_protocol.h  logger.cpp  logger.h  ring_buffer.h  scancode_to_hid.h  watermark.h  win_headers.h
src/driver/kbfilter/: kbfilter.c  kbfilter.h  kbfilter.inf
src/driver/moufilter/: moufilter.c  moufilter.inf
src/input/: input_router.cpp  input_router.h  mouse_boundary.cpp  mouse_boundary.h  raw_input_capture.cpp  raw_input_capture.h  shortcut_manager.cpp  shortcut_manager.h
src/service/: cursorshare_service.cpp  cursorshare_service.h  latency_monitor.cpp  latency_monitor.h
tests/: hid_descriptor_tests.cpp  input_router_tests.cpp  mouse_boundary_tests.cpp  ring_buffer_tests.cpp
tools/: bt_diagnostic.cpp  latency_benchmark.cpp
